# clawdibrate

./: .gitignore  AGENTS.md  AGENTS_v0.4.0.md  ARCHITECTURE.md  CLAUDE.md  README.md  clawdibrate-loop.py  clawdibrate.env.example  package.json  pyproject.toml  setup  skills-lock.json
.beads/: metadata.json
.claude/: settings.json
.claude/skills/: clawdbrt-add-new-features  clawdbrt-implement  clawdbrt-kanban  clawdbrt-loop  clawdbrt-record-start  clawdbrt-record-stop
.conversations/: 2026-04-01_v0.1.0_bootstrap.jsonl
clawdibrate/: __init__.py  __main__.py  compress.py  env_bootstrap.py  git_history.py  helpers.py  instruction_files.py  log.py  loop.py  orchestrator.py  ralph.py  runner.py  scores.py  session_dump.py  tokens.py
clawdibrate/agents/: __init__.py  base.py  claude.py  codex.py  custom.py  llm.py  opencode.py
clawdibrate/prompts/: bug-identifier.md  implementer.md  judge.md
docs/: CHANGELOG.md  commands.md  demo-deck.mdx  how-it-works.md  quickstart.md  setup-convention.md  skills.md
docs/v0_0_0/: CHANGELOG.md  README.md
docs/v0_10_0/: README.md  SMOKE_TEST.md  SPEC.md
docs/v0_12_0/: SPEC.md
docs/v0_1_0/: AGENTS.md
docs/v0_2_0/: AGENTS.md  README.md
docs/v0_3_0/: AGENTS.md  README.md  SPEC.md  skill-router-draft.md  vercel-skills.md
docs/v0_4_0/: AGENTS.md  README.md  SPEC.md
docs/v0_4_1/: README.md
docs/v0_4_2/: README.md
docs/v0_5_0/: README.md
docs/v0_6_0/: README.md  research-foundations.md
docs/v0_8_0/: SPEC.md  ralph-loop.md
scripts/: presubmit.sh
tests/: test_calibrate.py  test_version_sync.py
(+111 files in other folders)
